# local-tuya-ceiling-fan

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
local_tuya_ceiling_fan/: __init__.py  device.py
local_tuya_ceiling_fan/domoticz/: install.py
tests/: test_device.py  test_void.py
tests/domoticz/: test_install.py  test_metadata.xml
