[tool.poetry]
name = "local_tuya_ceiling_fan"
version = "1.4.0"
description = "Control a Tuya Ceiling fan over LAN."
authors = ["Gabriel Pajot <gab@les-cactus.co>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpajot/local-tuya-ceiling-fan"
include = ["local_tuya_ceiling_fan/py.typed"]

[tool.poetry.dependencies]
python = ">=3.8"

local-tuya = ">=2.1,<3"
local-tuya-domoticz-tools = { version = ">=1.1,<2", optional = true }

[tool.poetry.extras]
domoticz = ["local-tuya-domoticz-tools"]

[tool.poetry.group.test.dependencies]
pytest = "==7.2.2"
pytest-asyncio = "==0.20.3"
pytest-mock = "==3.10.0"
ruff = "==0.0.254"
mypy = "==1.1.1"
black = "==23.1.0"
pre-commit = "==3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
